--- a/package.json
+++ b/package.json
@@ -1,15 +1,34 @@
 {
   "name": "socialmedia",
   "version": "1.0.0",
-  "description": "backend for social meida",
+  "description": "Backend API for a social media platform",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js",
+    "start": "node src/index.js"
   },
   "keywords": [
     "javascript",
-    "backend"
+    "backend",
+    "social media",
+    "API",
+    "RESTful"
   ],
   "author": "Prashant Deshar",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.5",
+    "mongoose-aggregate-paginate-v2": "^1.1.3"
+  }
 }
